# claude-secure-coding-rules

./: .gitattributes  .gitignore  .markdownlint.json  CLAUDE.md  README.md  SECURITY.md  TERMS.md  pyproject.toml  settings-template.json
.claude-plugin/: plugin.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  new_rule_request.md
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  NOTIFICATIONS.md  governance.md  p05-audit-output.yaml  p05-audit-schema.md  standards-pin.yaml
docs/explanation/: enforcement-coverage.md  why-bypure.md
docs/how-to/: merge-settings-template.md  verify-the-release.md  write-your-own-hook.md
docs/superpowers/plans/: 2026-05-24-cscr-v2-implementation.md
docs/superpowers/specs/: 2026-05-24-cscr-amendment-01.md  2026-05-24-cscr-amendment-02.md  2026-05-24-cscr-design-retrospective.md  2026-05-24-cscr-modernization-design.md
rules/_core/: agent-security.md  ai-security.md  graph-database-security.md  mcp-security.md  owasp-2025.md  rag-security.md
rules/backend/autogen/: CLAUDE.md
rules/backend/bentoml/: CLAUDE.md
rules/backend/crewai/: CLAUDE.md
rules/backend/django/: CLAUDE.md
tests/: README.md  conftest.py
tests/code_validation/: test_code_examples.py
tests/coverage/: test_coverage.py
tests/held_out_corpus/: README.md
tests/security/: test_security_rules.py
tests/structural/: test_rule_format.py
tools/: lint_skills.py  rule_to_skill_converter.py
tools/tests/: test_converter.py  test_converter_golden.py  test_lint_skills.py
(+131 files in other folders)
