[project]
name = "cscr-tools"
version = "0.1.0"
description = "Internal tooling for tikitribe-secure-coding-rules: converter, eval harness, lint"
requires-python = ">=3.11"
dependencies = [
    "PyYAML==6.0.2",
    "markdown-it-py==3.0.0",
    "anthropic>=0.40.0",
    "click==8.1.7",
    "jsonschema==4.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-mock==3.14.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-mock==3.14.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]

[tool.pytest.ini_options]
testpaths = ["tools/tests", "tests/structural", "tests/semantic", "tests/coverage"]
pythonpath = ["."]
